--- a/themes/paper/layouts/_default/list.html
+++ b/themes/paper/layouts/_default/list.html
@@ -47,9 +47,7 @@
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
   <h2 class="!my-0 pb-1 !leading-none">{{ .Title }}</h2>
-  <time class="text-sm opacity-60"
-    >{{ .Date | time.Format ":date_medium" }}</time
-  >
+  <time class="text-sm opacity-60" data-type="create_timestamp" data-date="{{ .Date.Unix }}" >{{ .Date | time.Format ":date_medium" }}</time>
   <a class="absolute inset-0" href="{{ .Permalink }}"></a>
 </section>
 {{ end }}
@@ -67,5 +65,7 @@
   {{ end }}
 </nav>
 {{ end }}<!---->
+
+
 
 {{ end }}
